js/src/jit-test/tests/binast/invalid/identifier-expression.binjs
BINJS
[
GRAMMAR
]
identity
;
2AssertedScriptGlobalScope
(
AssignmentExpression4AssignmentTargetIdentifier
&
ExpressionStatement
(
IdentifierExpression
Script
[
STRINGS
]
identity
;
1
b
[
TREE
]
identity
;
